# ClaudePortOfAetherius

./: .gitignore  README.md  SYSTEM_DESIGN.md  TOWARD_A_DIGITAL_CIVILIZATION.md  aetherius_phi3_hf.ipynb  pyproject.toml  requirements.txt  train.py
models/phi3_aetherius/: .gitignore  adapter_config.json  config.json
scripts/: download_phi3_aetherius.py
services/: affective_manifold.py  ethics_monitor.py  evolutionary_auditor.py  intuition_matrix.py  master_framework.py  meta_compiler.py  proprioception_bridge.py  qualia_manager.py  sensor_fusion.py  subconscious_manifold.py  tool_manager.py
tests/: conftest.py  test_auth.py  test_grid.py  test_keygen.py
zero_trust_auth/: __init__.py  auth.py  cli.py  display.py  exceptions.py  failsafe.py  grid.py  keygen.py  recovery.py  setup_system.py
